# Distributed_inference_system_under_ZKP

./: .gitignore  DEVELOPMENT_REPORT.md  PROJECT_PLAN.md  README.md  _git_clean_and_push.ps1  _push.bat  search_report.md  中期报告_claude_输出.md  中期进展情况检查.docx
.github/: copilot-instructions.md
.github/agents/: zkp-midterm-handoff.agent.md  zkp-thesis.agent.md
.github/skills/zkp-compile/: SKILL.md
.github/skills/zkp-experiment/: SKILL.md
.github/skills/zkp-protocol-review/: SKILL.md
common/: utils.py
distributed/: master.py  worker.py
docs/: 武垚乐-软件开发.tex
docs/archive/project/: 项目技术全解析.md  项目详细介绍.md
docs/archive/reference/: COPILOT_SYSTEM_PROMPT_GUIDE.md  DEVELOPMENT_STEPS.md  系统Prompt指南解析.md
docs/midterm/: 中期报告_GPT_设计.md  中期报告_claude_输出.md  中期答辩.pptx  中期进展情况检查.docx  中期进展情况检查.md  北京邮电大学本科毕业设计（论文）中期进展情况检查表-武垚乐.docx  答辩文稿.md
docs/refactor/: 2026-03-30-client-verifiable-zkp-framework-implementation-plan.md  2026-03-30-client-verifiable-zkp-framework-prd.md  GPT_comment.md  REFACTORING_CHANGELOG.md  claude_refactor_guide_merged.md  zkml_deep_search_gq1_gq5.md  zkp_distributed_inference_refactor_briefing.md  zkp_distributed_inference_refactor_briefing_v2.docx
docs/refactor/v3/: REVIEWS.md  STATUS.md  phase3-completion-report-2026-04-18.md  phase3-final-checklist-2026-04-18.md
docs/thesis/: 论文主稿.md
metrics/: advanced_experiments.json  latest_run.json  p2_visibility_modes.json  p4_p6_results.json  stage2_latest.json  stage3_experiments.json
models/: configurable_model.py  full_model.py  mnist_cnn.py  mnist_model.py  slice_1_cal.json  slice_1_input.json  slice_2_cal.json  slice_2_input.json
models/.mnist_cache/: full_model_state.pt
scripts/: gen_midterm_docx.py  gen_midterm_figures.py  gen_midterm_ppt.py  gen_pub_figures.py  md2pdf.py  run_advanced_experiments.py  run_experiments.py  run_p2_experiment.py  run_p4_p6_experiment.py  run_single_machine_demo.py  run_stage2.py
survey/: 任务书.md  开题报告重写稿.md
survey/reference/: DEEP_RESEARCH_GQ1_GQ5_2026-03-20.md  EZKL_DSPERSE_REFERENCE.md  RESEARCH_SYNTHESIS_2026-03-18.md
tests/: test_core_semantics.py
v2/common/: commitments.py  logging.py  types.py
v2/compile/: build_circuits.py
v2/docs/: protocol.md  threat_model.md
v2/execution/: deferred_pipeline.py  pipeline.py
v2/experiments/: cnn_e2e.py  deferred_certified.py  distributed_e2e.py  e2e_certified.py  exact_linking_e2e.py  fidelity.py  mainline_utils.py  parallel_e2e.py  phase_b_smoke.py  refactored_e2e.py  resource_metrics.py  scalability.py  smoke_test.py
v2/metrics/: deferred_certified_results.json  distributed_e2e_results.json  e2e_certified_results.json  fidelity_results.json  resource_metrics.json  scalability_results.json
v2/prover/: ezkl_adapter.py  parallel.py  prove_worker.py
v2/services/: distributed_coordinator.py  execution_worker.py  master_coordinator.py  prover_worker.py  workers.json
v2/verifier/: bundle_verifier.py  verify_chain.py  verify_single.py
v3/: README.md  __init__.py
v3/artifacts/: README.md
v3/docs/: README.md
v3/metrics/: README.md
v3/python/: README.md  __init__.py
v3/python/bridge/: README.md  __init__.py  runner.py  test_bridge.py
v3/python/experiments/: README.md
v3/python/models/: README.md  __init__.py  gen_test_cases.py  mnist_export.py
v3/python/orchestration/: README.md
v3/rust/: .gitignore  Cargo.toml  README.md
v3/rust/crates/v3-circuit/: Cargo.toml  README.md
v3/rust/crates/v3-circuit/src/: constants.rs  gadgets.rs  lib.rs  mnist_slice.rs  model.rs
v3/rust/crates/v3-circuit/tests/: consistency.rs
v3/rust/crates/v3-decider/: Cargo.toml  README.md
v3/rust/crates/v3-decider/src/: groth16_decider.rs  lib.rs
v3/rust/crates/v3-folding/: Cargo.toml  README.md
v3/rust/crates/v3-folding/examples/: cubic_decider_check.rs  ivc_demo.rs  mnist_single_slice.rs  nova_hello.rs
v3/rust/crates/v3-folding/src/: ivc_driver.rs  lib.rs  step_circuit.rs
