[package]
name = "v3-circuit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-std = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
folding-schemes = { workspace = true }

[dev-dependencies]
ark-bn254 = { workspace = true }
