[package]
name = "v3-decider"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
folding-schemes = { workspace = true }
ark-bn254 = { workspace = true }
ark-grumpkin = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { version = "^0.5.0", default-features = false, features = ["parallel"] }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = { version = "^0.5.0", default-features = false }
ark-std = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
v3-circuit = { path = "../v3-circuit" }
v3-folding = { path = "../v3-folding" }
