[package]
name = "v3-folding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
folding-schemes = { workspace = true }
ark-bn254 = { workspace = true }
ark-grumpkin = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
v3-circuit = { path = "../v3-circuit" }

[dev-dependencies]
v3-decider = { path = "../v3-decider" }
sha2 = "0.10"
base64 = "0.22"
# Required ONLY for the `cubic_decider_check` diagnostic example (Sonobe
# pin-health baseline). Pulled in via the same `[patch.crates-io]` table
# as v3-decider so the concrete `Groth16<Bn254>` type resolves to the
# same crate instance used everywhere else.
ark-groth16 = { version = "^0.5.0", default-features = false, features = ["parallel"] }

[[example]]
name = "nova_hello"
path = "examples/nova_hello.rs"

[[example]]
name = "mnist_single_slice"
path = "examples/mnist_single_slice.rs"

[[example]]
name = "ivc_demo"
path = "examples/ivc_demo.rs"

[[example]]
name = "cubic_decider_check"
path = "examples/cubic_decider_check.rs"
